css sheet cleanup; bug fix on scaling issue with section headers on mobile

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -30,9 +30,9 @@ header {
 }
 
 .section-heading .header {
-  color: black;
+  color: var(--bg-color);
   padding: 0.75rem 5rem;
-  transition: all 1s;
+  transition: color 1s ease-in-out;
   font-family: Tomorrow;
 }
 
