--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,8 +4,6 @@
 @import "./hero.css";
 
 :root {
-  /* --theme-color: rgb(123, 104, 238);
-  --highlights: rgb( 72, 61, 139 ); */
   --theme-color: #2a2356;
   --bg-color: #2e0001;
   --lettering: #ff003c;
